# forge

./: .dockerignore  .env.example  .gitignore  DEMO.md  HACKATHON_SPEC.md  README.md  forge-codex-zendesk.md  main.py  planv2.md  pyproject.toml  seed_demo.py
demo/: SCRIPT.md  demo-zendesk.md  task.md  task.txt  task2.md  task2.txt  task3.txt
demo/hackathon/: DEMO.md  golden_run.jsonl  task-agent-radar.md  task-market-brief.md
deploy/akash/: Dockerfile  deploy.sdl.yaml  recon.sdl.yaml
deploy/pomerium/: recon-config.yaml
deploy/pomerium/templates/: gateway.yaml
docs/: DEVPOST.md
docs/recon/: DECISIONS.md  akash.md  pomerium.md  zero.md
fixtures/: refund_policy.md
forge/: __init__.py  acquire.py  brightdata.py  codex_adapter.py  events.py  identity.py  llm.py  loop.py  mock_order_api.py  registry.py  sandbox.py  secret_access.py  shell.py  synthesis.py  trust.py  tui.py  zendesk_client.py  zendesk_driver.py  zero_bridge.py
forge/tools/: manifest.json
runs/: akash-20260717-135556.jsonl
scripts/: akash_run.sh  stats.py  test_acquire.py  test_trust.py
tests/: test_phase1.py  test_phase2.py  test_phase4.py
