[project]
name = "forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "openai>=2.14.0",
    "pydantic>=2.13.4",
    "pytest>=8.4.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
